name:                fedit
version:             0.1.0.0
synopsis:            Text editor for FOUL. CS410 Final Assignment project
license:             PublicDomain
author:              Darren Mowat
maintainer:          darren.mowat@strath.ac.uk         
build-type:          Simple
cabal-version:       >=1.8
-- Standard Library Files
Data-Files:          std/bool.foul
                     std/math.foul
                     std/test.foul

executable fedit
  extensions:        ForeignFunctionInterface
  extra-libraries:   ncurses
  main-is:           Main.hs
  hs-source-dirs:    src            
  build-depends:     base ==4.*,
                     filepath >= 1 && < 2,
                     directory ==1.2.*,
                     parsec ==3.1.*,
                     split > 0,
                     MonadRandom ==0.1.8
  other-modules:     Editor.ANSIEscapes
                     Editor.Block
                     Editor.KeyHandler
                     Editor.Overlay
                     FOUL.Blackbox
                     FOUL.FOUL
                     FOUL.ImportResolver
                     FOUL.Language
                     FOUL.Parser
                     Util.EitherUtils
                     Util.FileUtils
                     Util.ListUtils
                     Util.LogUtils

executable foul
  main-is:           FOUL/Main.hs
  hs-source-dirs:    src            
  build-depends:     base ==4.5.*,
                     filepath >= 1 && < 2,
                     directory ==1.2.*,
                     parsec ==3.1.*,
                     split > 0,
                     MonadRandom ==0.1.8
  other-modules:     FOUL.FOUL
                     FOUL.ImportResolver
                     FOUL.Language
                     FOUL.Parser
                     Util.EitherUtils
                     Util.FileUtils
                     Util.ListUtils
